# yaevmi

./: .env.example  .gitignore  Cargo.toml  README.md  TEST.md  TODO.md  x.sh
.cargo/: config.toml
yaevmi-base/: Cargo.toml
yaevmi-base/src/: acc.rs  dto.rs  int.rs  lib.rs
yaevmi-core/: Cargo.toml
yaevmi-core/src/: aux.rs  cache.rs  call.rs  chain.rs  eip7702.rs  evm.rs  exe.rs  lib.rs  pre.rs  rpc.rs  state.rs  trace.rs
yaevmi-core/src/ops/: basic.rs  calls.rs  chain.rs  logs.rs  mod.rs  stack.rs  store.rs
yaevmi-core/src/pre/: blake2f.rs  bn128.rs  ecrecover.rs  identity.rs  kzg.rs  mod.rs  modexp.rs  p256verify.rs  ripemd160.rs  sha256.rs
yaevmi-full/: Cargo.toml
yaevmi-full/src/: lib.rs
yaevmi-misc/: Cargo.toml
yaevmi-misc/src/: buf.rs  hex.rs  http.rs  lib.rs
yaevmi-test/: Cargo.toml
yaevmi-test/sol/: auths.sol  calls.sol  count.sol  flash.sol  hello.sol  maker.sol  proxy.sol  token.sol  value.sol
yaevmi-test/src/: lib.rs  revm.rs
yaevmi-test/src/eth/: dto.rs  mod.rs  state.rs
yaevmi-test/src/exe/: mod.rs
yaevmi-test/src/net/: mod.rs
yaevmi-test/src/sol/: auths.rs  calls.rs  count.rs  flash.rs  hello.rs  maker.rs  mod.rs  proxy.rs  token.rs  value.rs
yaevmi-wasm/: Cargo.toml  TESTING.md  index.html
yaevmi-wasm/src/: lib.rs
