[workspace]
resolver = "3"
members = [
    "yaevmi",
    "yaevmi-base",
    "yaevmi-core",
    "yaevmi-misc",
    "yaevmi-test",
    "yaevmi-wasm",
]

[workspace.dependencies]
eyre = "0.6"
thiserror = "2.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
ruint = "1.17"
ethnum = "1.5"
keccak-asm = "0.1"
tiny-keccak = { version = "2", features = ["keccak"] }
rlp = "0.8"
reqwest = { version = "0.13", features = ["json"] }
k256 = { version = "0.13", features = ["ecdsa"] }
yaevmi-base = { version = "0.1.0", path = "./yaevmi-base" }
yaevmi-core = { version = "0.1.0", path = "./yaevmi-core" }
yaevmi-misc = { version = "0.1.0", path = "./yaevmi-misc" }
