[package]
name = "yaevmi-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
thiserror.workspace = true
async-trait.workspace = true
ethnum.workspace = true
yaevmi-base.workspace = true
yaevmi-misc.workspace = true

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
