[package]
name = "yaevmi-test"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
async-trait.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
yaevmi-base.workspace = true
yaevmi-core.workspace = true
yaevmi-misc.workspace = true

[dev-dependencies]
futures = "0.3"
k256 = { version = "0.13", features = ["ecdsa"] }
pretty_assertions = "1.4.1"
revm = { version = "36.0.0", features = ["optional_block_gas_limit", "optional_no_base_fee"] }
tokio = { version = "1.50.0", features = ["full"] }
