[package]
name = "yaevmi-test"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
async-trait.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
yaevmi-base.workspace = true
yaevmi-core.workspace = true
yaevmi-misc.workspace = true

revm = { version = "36.0", features = ["alloydb"] }
alloy-provider = { version = "1.0", default-features = true }
tokio = { version = "1.50", features = ["full"] }
futures = "0.3"
dotenv = "0.15"

[dev-dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }
pretty_assertions = "1.4"
