[package]
name = "yaevmi-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies] ## comment-out this line for development
yaevmi-core.workspace = true

js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

## Each transitive `getrandom` needs '{wasm_},js' feature enabled
## (Read more here: https://docs.rs/getrandom/latest/getrandom/)
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
